# MLServer

./: .dockerignore  .gitignore  .readthedocs.yaml  .snyk  .tool-versions  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE  MANIFEST.in  Makefile  OWNERS  OWNERS_ALIASES  README.md  RELEASE.md  docker-check.sh  generate_api_docs.py  images.txt  jenkins-x-lint.yml  jenkins-x.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  strive-build.sh  test-results.csv  test.py  tox.ini  tox.runtime.ini
.github/: dependabot.yml
.sphinx/: Makefile  README.md  conf.py  index.md
342-scripts/: gen.py  pipeline.py  request.py
benchmarking/: Makefile  README.md  clone-models.sh  generator.py  grpc-data.json  models.py  requirements.txt  testserver.py
bert-japanese/: model-settings.json
bert-japanese-small/: model-settings.json
docs/: Makefile  SUMMARY.md  changelog.md  conf.py  getting-started.md  index.md  new-batch.md.md  references.bib  requirements.txt
docs-gb/: README.md  SUMMARY.md  changelog.md  conf.py  generate_api_docs.py  getting-started.md  index.md
hack/: activate-env.sh  activate-libomp-macos.sh  build-env.sh  build-image.sh  build-images.sh  build-wheels.sh  generate-types.sh  setup-env.sh  (+3 more)
runtimes/alibi-detect/: LICENSE  README.md  __init__.py  pyproject.toml  setup.py  tox.ini
runtimes/alibi-detect/mlserver_alibi_detect/: __init__.py  alibi_detect.py  errors.py  runtime.py  version.py
runtimes/alibi-detect/mlserver_alibi_detect/cd/: chisquare.py  runtime.py  tabular.py
runtimes/alibi-detect/mlserver_alibi_detect/protocols/: request_handler.py  seldon_http.py  tensorflow_http.py  util.py  v2.py
runtimes/alibi-detect/requirements/: dev.txt
runtimes/alibi-detect/tests/: conftest.py  test_alibi_detect.py  test_drift_detector.py  test_outlier_detector.py  test_runtime.py
runtimes/alibi-detect/tests_alibi_detect/: __init__.py  conftest.py
runtimes/alibi-explain/: README.md  __init__.py  pyproject.toml  requirements-dev.txt  setup.py
runtimes/alibi-explain/mlserver_alibi_explain/: __init__.py  alibi_dependency_reference.py  common.py  errors.py  runtime.py  version.py
runtimes/alibi-explain/mlserver_alibi_explain/explainers/: anchor_image.py  black_box_runtime.py  integrated_gradients.py  sklearn_api_runtime.py  white_box_runtime.py
runtimes/alibi-explain/requirements/: dev.txt
runtimes/alibi-explain/tests/: conftest.py  test_alibi_runtime_base.py  test_black_box.py  test_common.py  test_integrated_gradients.py  test_model.py  test_runtime.py  test_utils.py  test_white_box_sklearn.py  test_white_box_sklearn_cases.py
runtimes/alibi-explain/tests/.data/mnist_anchor_image/: explainer.dill  meta.dill  segmentation_fn.dill
runtimes/alibi-explain/tests/helpers/: metrics.py  run_async.py  sk_model.py  tf_model.py  utils.py
runtimes/alibi-explain/tests_alibi_explain/: __init__.py  conftest.py  test_common.py  test_white_box_sklearn.py  test_white_box_sklearn_cases.py
runtimes/alibi-explain/tests_alibi_explain/helpers/: utils.py
runtimes/catboost/: README.md  __init__.py  pyproject.toml  setup.py  tox.ini
runtimes/catboost/mlserver_catboost/: __init__.py  catboost.py  version.py
runtimes/catboost/tests/: conftest.py  test_catboost.py
runtimes/catboost/tests/testdata/: inference-request.json
runtimes/huggingface/: Dockerfile  README.md  __init__.py  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
runtimes/huggingface/mlserver_huggingface/: __init__.py  codecs.py  common.py  errors.py  metadata.py  pipelines.py  runtime.py  settings.py  test.ipynb  version.py
runtimes/huggingface/mlserver_huggingface/codecs/: __init__.py  audio.py  base.py  chariot.py  conversation.py  image.py  json.py  jsonlist.py  numpylist.py  raw.py  utils.py
runtimes/huggingface/tests/: conftest.py  test_codecs.py  test_common.py  test_pipeline.py  test_runtime.py  test_runtime_cases.py  test_settings.py  utils.py
runtimes/huggingface/tests/test_codecs/: test_base.py  test_chariot.py  test_conversation.py  test_image.py  test_json.py  test_jsonlist.py  test_numpylist.py  test_raw.py
runtimes/huggingface/tests/test_tasks/: conftest.py  test_audio_classification.py  test_japanese_mask_fill.py  test_visual_question_anwsering.py
runtimes/huggingface/tests/testdata/: image_base64.txt
runtimes/lightgbm/: README.md  __init__.py  pyproject.toml  setup.py
runtimes/lightgbm/mlserver_lightgbm/: __init__.py  lightgbm.py  version.py
runtimes/lightgbm/tests/: conftest.py  test_lightgbm.py
runtimes/lightgbm/tests/testdata/: inference-request.json
runtimes/mlflow/: README.md  __init__.py  pyproject.toml  requirements-dev.txt  setup.py
runtimes/mlflow/mlserver_mlflow/: __init__.py  codecs.py  encoding.py  metadata.py  runtime.py  version.py
runtimes/mlflow/requirements/: dev.txt
runtimes/mlflow/tests/: conftest.py  fixtures.py  test_codecs.py  test_encoding.py  test_metadata.py  test_runtime.py  torch_fixtures.py
runtimes/mlflow/tests/rest/: conftest.py  test_endpoints.py  test_invocations.py  test_ping.py
runtimes/mlflow/tests/testdata/: inference-request.json
runtimes/mlflow/tests/testdata/pytorch_model/: MLmodel  conda.yaml
runtimes/mlflow/tests/testdata/pytorch_model/3.8/: MLmodel  conda.yaml  requirements.txt
runtimes/mllib/: README.md  __init__.py  pyproject.toml  setup.py  tox.ini
runtimes/mllib/mlserver-mllib/: __init__.py  errors.py  mllib.py  utils.py
runtimes/mllib/mlserver_mllib/: errors.py  mllib.py  version.py
runtimes/sklearn/: README.md  __init__.py  pyproject.toml  setup.py
runtimes/sklearn/mlserver_sklearn/: __init__.py  encoding.py  sklearn.py  version.py
runtimes/sklearn/tests/: conftest.py  dummy_model.py  test_sklearn.py
runtimes/sklearn/tests/testdata/: inference-request.json
runtimes/xgboost/: README.md  __init__.py  pyproject.toml  setup.py  tox.ini
runtimes/xgboost/mlserver_xgboost/: __init__.py  codecs.py  version.py  xgboost.py
runtimes/xgboost/tests/: conftest.py  test_xgboost.py
runtimes/xgboost/tests/testdata/: inference-request.json
(+884 files in other folders)
