[tool.poetry]
name = "mlserver-alibi-detect"
version = "1.6.0.dev2"
description = "Alibi-Detect runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_alibi_detect"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
mlserver = "*"
alibi-detect = {extras = ["tensorflow"], version = "*"}

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}
#tensorflow-macos = { version = "^2.15.0", markers = "platform_system=='Darwin' and platform_machine=='arm64'" }
tensorflow = "<2.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
