[tool.poetry]
name = "mlserver-alibi-detect"
version = "1.7.0.dev0"
description = "Alibi-Detect runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_alibi_detect"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
mlserver = "*"
# remove after alibi-detect 0.13 is released
alibi-detect = {extras = ["tensorflow"], git = "https://github.com/SeldonIO/alibi-detect.git", branch = "master"}

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}
tensorflow = "<2.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
