[tool.poetry]
name = "mlserver-alibi-explain"
version = "1.4.0.dev3"
description = "Alibi-Explain runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_alibi_explain"}]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
mlserver = "*"
orjson = "*"
alibi = {extras = ["shap", "tensorflow"], version = "*"}

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}
tensorflow = "~2.12.0"
requests-mock = "~1.10.0"
types-requests = "~2.28.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
