[tool.poetry]
name = "mlserver-alibi-explain"
version = "1.6.2.rc1"
description = "Alibi-Explain runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_alibi_explain"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
mlserver = "*"
mlserver_sklearn = "*"
mlserver_xgboost = "*"
mlserver_lightgbm = "*"
orjson = "*"
alibi = {extras = ["shap", "tensorflow"], version = "*"}

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}
mlserver_sklearn = {path = "../../runtimes/sklearn", develop = true}
mlserver_xgboost = {path = "../../runtimes/xgboost", develop = true}
mlserver_lightgbm = {path = "../../runtimes/lightgbm", develop = true}
tensorflow = "<2.15"
requests-mock = "~1.10.0"
types-requests = "~2.28.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
