[tool.poetry]
name = "mlserver-huggingface"
version = "1.7.0.dev0"
description = "HuggingFace runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_huggingface"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
mlserver = "*"
tensorflow = "*"
tf-keras = ">=2.16.0"
pillow = "*"
optimum = {extras = ["onnxruntime"], version = ">=1.4,<2.0"}

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}
# macOS x86 deprecated
# see: https://github.com/pytorch/pytorch/issues/114602
torch = [
    {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", version = "<2.3.0"},
    {markers = "sys_platform != 'darwin' or platform_machine != 'x86_64'", version = "<2.4.0"}
]
# tensorflow 2.17.0 not compiled for MacOS for x86 architectures
# see: https://www.tensorflow.org/install/pip#package_location
tensorflow = [
    {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", version = ">=2.12,<2.17"},
    {markers = "sys_platform != 'darwin' or platform_machine != 'x86_64'", version = ">=2.12,<2.18"}
]
transformers = ">=4.30,<5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
