[tool.poetry]
name = "mlserver-huggingface"
version = "1.7.0.dev0"
description = "HuggingFace runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_huggingface"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
mlserver = "*"
tensorflow = "*"
torch = "*"
tf-keras = ">=2.16.0"
pillow = "*"
optimum = {extras = ["onnxruntime"], version = ">=1.4,<2.0"}

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}
transformers = ">=4.30,<5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
