[tool.poetry]
name = "mlserver-lightgbm"
version = "1.4.0"
description = "LightGBM runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_lightgbm"}]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
mlserver = "*"
lightgbm = "*"
pandas = "*"

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
