[tool.poetry]
name = "mlserver-lightgbm"
version = "1.7.0"
description = "LightGBM runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_lightgbm"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
mlserver = "*"
lightgbm = "*"
pandas = "*"

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
