[tool.poetry]
name = "mlserver-mlflow"
version = "1.6.0.dev2"
description = "MLflow runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_mlflow"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
mlserver = "*"
mlflow = "*"

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}
torch = "2.2.1"
pytorch-lightning = "2.4.0"
torchmetrics = "1.4.1"
torchvision = "0.17.1"
mlflow = "2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
