[tool.poetry]
name = "mlserver-mlflow"
version = "1.6.0.dev2"
description = "MLflow runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_mlflow"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
mlserver = "*"
mlflow = "*"

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}
torch = "^2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
