[tool.poetry]
name = "mlserver-mllib"
version = "1.4.0.dev1"
description = "Spark MLlib runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "mlserver_mllib"}]

[tool.poetry.dependencies]
python = "^3.8"
mlserver = "*"
pyspark = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
