[tool.poetry]
name = "mlserver-mllib"
version = "1.5.0.dev1"
description = "Spark MLlib runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_mllib"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
mlserver = "*"
pyspark = "*"

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
