[tool.poetry]
name = "mlserver-sklearn"
version = "1.6.0.dev2"
description = "Scikit-Learn runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_sklearn"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scikit-learn = "1.5.0"
joblib = "1.4.2"
mlserver = "1.6.0.dev2"
h11 = "0.16.0"

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
